fixed swagger documentation
