# internal/pkg/api/responses/auth.go
@@ -1,0 +1,7 @@
+package responses
+
+// A SessionResponse is used to send back jwt tokens to the client.
+// swagger:response sessionResponse
+type SessionResponse struct {
+	Token string `json:"token"`
+}
