# internal/pkg/controllers/controller_factory.go
@@ -1,5 +1,5 @@
 // Package controllers
-// Holds all the controllers
+// Contains all the api controllers
 //
 //	Schemes: http, https
 //  Host: 0.0.0.0, localhost
@@ -16,8 +16,7 @@
 //  Deprecated: false
 //  Responses:
 //	 default: genericResponse
-//	 200: An array of cameras
-//	 500: genericError
+//	 500: genericResponse
 //
 //  swagger:meta
 package controllers
@@ -26,27 +25,6 @@ import "github.com/ReolinkCameraAPI/noctilucago/internal/pkg/database/procedures
 
 type ApiController struct {
 	db *procedures.DB
-}
-
-// A SessionResponse is used to send back jwt tokens to the client.
-// swagger:response sessionResponse
-type SessionResponse struct {
-	Token string `json:"token"`
-}
-
-// A GenericResponse is used to send back information to the client with a general status,
-// could be an error or a success message.
-// swagger:response generalResponse
-type GenericResponse struct {
-	Status  string `json:"status"`
-	Message string `json:"message"`
-}
-
-// A VersionResponse is used to send back information to the client with a general status,
-// could be an error or a success message.
-// swagger:response versionResponse
-type VersionResponse struct {
-	Version string `json:"version"`
 }
 
 func NewApiController(db *procedures.DB) *ApiController {
