# internal/pkg/controllers/network.go
@@ -3,6 +3,7 @@ package controllers
 import (
 	"encoding/json"
 	"github.com/ReolinkCameraAPI/noctilucago/internal/pkg/api/models"
+	"github.com/ReolinkCameraAPI/noctilucago/internal/pkg/api/responses"
 	dbmodels "github.com/ReolinkCameraAPI/noctilucago/internal/pkg/database/models"
 	"github.com/ReolinkCameraAPI/noctilucago/internal/pkg/enum"
 	"github.com/gin-gonic/gin"
@@ -12,7 +13,7 @@ func (ac *ApiController) NetworkProxyCreate(c *gin.Context) {
 	var proxy models.ProxyInput
 
 	if c.ShouldBindJSON(&proxy) != nil {
-		c.JSON(500, GenericResponse{
+		c.JSON(500, responses.GenericResponse{
 			Status:  "error",
 			Message: "Network Proxy information sent to the server is incorrect.",
 		})
@@ -22,7 +23,7 @@ func (ac *ApiController) NetworkProxyCreate(c *gin.Context) {
 	data, err := json.Marshal(proxy)
 
 	if err != nil {
-		c.JSON(500, GenericResponse{
+		c.JSON(500, responses.GenericResponse{
 			Status:  "error",
 			Message: "Network Proxy information sent to the server is incorrect.",
 		})
@@ -34,7 +35,7 @@ func (ac *ApiController) NetworkProxyCreate(c *gin.Context) {
 	err = json.Unmarshal(data, &dbProxy)
 
 	if err != nil {
-		c.JSON(500, GenericResponse{
+		c.JSON(500, responses.GenericResponse{
 			Status:  "error",
 			Message: "Network Proxy information sent to the server is incorrect.",
 		})
@@ -44,7 +45,7 @@ func (ac *ApiController) NetworkProxyCreate(c *gin.Context) {
 	p, err := ac.db.NetworkProxyCreate(dbProxy)
 
 	if err != nil {
-		c.JSON(500, GenericResponse{
+		c.JSON(500, responses.GenericResponse{
 			Status:  "error",
 			Message: "Database error.",
 		})
@@ -59,7 +60,7 @@ func (ac *ApiController) NetworkProxyRead(c *gin.Context) {
 	proxies, err := ac.db.NetworkProxyRead()
 
 	if err != nil {
-		c.JSON(500, GenericResponse{
+		c.JSON(500, responses.GenericResponse{
 			Status:  "error",
 			Message: "Database error",
 		})
@@ -74,7 +75,7 @@ func (ac *ApiController) NetworkProxyReadUUID(c *gin.Context) {
 	proxy, err := ac.db.NetworkProxyReadUUID(proxyUUID)
 
 	if err != nil {
-		c.JSON(500, GenericResponse{
+		c.JSON(500, responses.GenericResponse{
 			Status:  "error",
 			Message: "Database error",
 		})
@@ -90,7 +91,7 @@ func (ac *ApiController) NetworkProxyUpdate(c *gin.Context) {
 	var proxy *models.ProxyInput
 
 	if c.ShouldBindJSON(&proxy) != nil {
-		c.JSON(500, GenericResponse{
+		c.JSON(500, responses.GenericResponse{
 			Status:  "error",
 			Message: "Network Proxy information sent to the server is incorrect.",
 		})
@@ -100,7 +101,7 @@ func (ac *ApiController) NetworkProxyUpdate(c *gin.Context) {
 	data, err := json.Marshal(proxy)
 
 	if err != nil {
-		c.JSON(500, GenericResponse{
+		c.JSON(500, responses.GenericResponse{
 			Status:  "error",
 			Message: "Network Proxy information sent to the server is incorrect",
 		})
@@ -111,7 +112,7 @@ func (ac *ApiController) NetworkProxyUpdate(c *gin.Context) {
 	err = json.Unmarshal(data, dbProxy)
 
 	if err != nil {
-		c.JSON(500, GenericResponse{
+		c.JSON(500, responses.GenericResponse{
 			Status:  "error",
 			Message: "Network Proxy information sent to the server is incorrect",
 		})
@@ -120,7 +121,7 @@ func (ac *ApiController) NetworkProxyUpdate(c *gin.Context) {
 	p, err := ac.db.NetworkProxyUpdate(proxyUUID, dbProxy)
 
 	if err != nil {
-		c.JSON(500, GenericResponse{
+		c.JSON(500, responses.GenericResponse{
 			Status:  "error",
 			Message: "Database error",
 		})
@@ -130,15 +131,23 @@ func (ac *ApiController) NetworkProxyUpdate(c *gin.Context) {
 }
 
 func (ac *ApiController) NetworkReadProtocol(c *gin.Context) {
-	protocols := enum.ProtocolList()
-	c.JSON(200, map[string]interface{}{
-		"protocols": protocols,
-	})
+	protocols := struct {
+		Protocols []string `json:"protocols"`
+	}{
+		enum.ProtocolList(),
+	}
+
+	c.JSON(200,
+		responses.NetworkProtocolResponse{Body: protocols},
+	)
 }
 
 func (ac *ApiController) NetworkProxyReadScheme(c *gin.Context) {
-	schemes := enum.SchemeList()
-	c.JSON(200, map[string]interface{}{
-		"schemes": schemes,
-	})
+	schemes := struct {
+		Schemes []string `json:"schemes"`
+	}{
+		enum.SchemeList(),
+	}
+
+	c.JSON(200, responses.NetworkProxySchemeResponse{Body: schemes})
 }
